--- a/STM32LWIPTest.ioc
+++ b/STM32LWIPTest.ioc
@@ -1,10 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
-ETH.IPParameters=MediaInterface,MACAddr
+ETH.IPParameters=MediaInterface,MACAddr,PhyAddress
 ETH.MACAddr=00\:02\:F7\:F1\:D4\:EA
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
+ETH.PhyAddress=0
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=false
 LWIP.Version=v2.0.3_Cube
