--- a/STM32LWIPTest.ioc
+++ b/STM32LWIPTest.ioc
@@ -1,13 +1,30 @@
 #MicroXplorer Configuration settings - do not modify
-ETH.IPParameters=MediaInterface,MACAddr,PhyAddress
+ETH.IPParameters=MediaInterface,MACAddr,PHY_SR,PHY_Name_RMII,PhyAddress,PHY_READ_TO,PHY_WRITE_TO,PHY_RESET_DELAY,PHY_SPEED_STATUS,PHY_DUPLEX_STATUS,PHY_ISFR,PHY_ISFR_INT4
 ETH.MACAddr=00\:02\:F7\:F1\:D4\:EA
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
+ETH.PHY_DUPLEX_STATUS=0x0010
+ETH.PHY_ISFR=0x001D
+ETH.PHY_ISFR_INT4=0x0010
+ETH.PHY_Name_RMII=LAN8742A_PHY_ADDRESS
+ETH.PHY_READ_TO=0x0000FFFF
+ETH.PHY_RESET_DELAY=0x00000FFF
+ETH.PHY_SPEED_STATUS=0x0004
+ETH.PHY_SR=0x1F
+ETH.PHY_WRITE_TO=0x0000FFFF
 ETH.PhyAddress=0
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.IPParameters=Tasks01,configUSE_TICK_HOOK,FootprintOK
 FREERTOS.Tasks01=defaultTask,0,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configUSE_TICK_HOOK=0
 File.Version=6
 KeepUserPlacement=false
+LWIP.GATEWAY_ADDRESS=163.050.136.254
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,LWIP_UDP,MEMP_NUM_TCP_PCB
+LWIP.IP_ADDRESS=163.050.137.048
+LWIP.LWIP_DHCP=1
+LWIP.LWIP_UDP=1
+LWIP.MEMP_NUM_TCP_PCB=1
+LWIP.NETMASK_ADDRESS=255.255.254.000
 LWIP.Version=v2.0.3_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=ETH
@@ -48,15 +65,15 @@ MxCube.Version=4.27.0
 MxDb.Version=DB.4.0.270
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.ETH_IRQn=true\:5\:0\:false\:false\:true\:true\:false
+NVIC.ETH_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM10
